chore: fix layout shift issue

--- a/polaris-react/src/components/IndexTable/IndexTable.module.scss
+++ b/polaris-react/src/components/IndexTable/IndexTable.module.scss
@@ -1278,7 +1278,7 @@ $loading-panel-height: 53px;
 }
 
 .StickyTable {
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
@@ -1378,12 +1378,13 @@ $loading-panel-height: 53px;
 
 .BulkActionsWrapper {
   visibility: visible;
-  position: static;
+  position: relative;
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   z-index: var(--pc-index-table-bulk-actions);
   padding: var(--p-space-100) var(--p-space-200) var(--p-space-100)
     var(--p-space-300);
   line-height: var(--p-font-line-height-500);
+  background-color: var(--p-color-bg);
 }
 
 $scroll-bar-size: var(--p-space-200);
@@ -1447,13 +1448,6 @@ $scroll-bar-size: var(--p-space-200);
 
 .disableTextSelection {
   user-select: none;
-}
-
-.selectMode {
-  // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-  transform: translateY(calc(-1 * var(--pc-index-table-table-header-offset)));
-  // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-  margin-bottom: calc(-1 * var(--pc-index-table-table-header-offset));
 }
 
 .EmptySearchResultWrapper {
